[gd_scene load_steps=3 format=2]

[ext_resource path="res://Image/WelcomePageBackgound.jpg" type="Texture" id=1]
[ext_resource path="res://WelcomeScene.gd" type="Script" id=5]

[node name="Gotcha2D" type="Node2D"]

[node name="WelcomeScene" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="WelcomeScene"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="WelcomeScene/Control"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}


[node name="WelcomePageBackgound" type="Sprite" parent="WelcomeScene/Control/TextureRect"]
position = Vector2( 649.117, 372.193 )
scale = Vector2( 0.404617, 0.383453 )

texture = ExtResource( 1 )

[node name="LoginButton" type="Button" parent="WelcomeScene"]
margin_left = 583.747
margin_top = 434.12
margin_right = 681.747
margin_bottom = 472.12
text = "Login"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SignupButton" type="Button" parent="WelcomeScene"]
margin_left = 583.747
margin_top = 489.263
margin_right = 681.747
margin_bottom = 527.263
text = "Signup"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="WelcomeScene"]
margin_left = 582.835
margin_top = 618.144
margin_right = 681.835
margin_bottom = 655.144
text = "Exit"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameTextBox" type="TextEdit" parent="WelcomeScene"]
margin_left = 513.224
margin_top = 265.178
margin_right = 758.224
margin_bottom = 299.178
rect_pivot_offset = Vector2( 66.7742, 22 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordTextBox" type="TextEdit" parent="WelcomeScene"]
anchor_right = 0.273
anchor_bottom = 0.558
margin_left = 512.224
margin_top = 334.0
margin_right = 409.784
margin_bottom = -31.76
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameLabel" type="Label" parent="WelcomeScene"]
margin_left = 429.039
margin_top = 273.114
margin_right = 495.039
margin_bottom = 304.114
text = "Username
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordLabel" type="Label" parent="WelcomeScene"]
margin_left = 432.292
margin_top = 344.047
margin_right = 492.292
margin_bottom = 375.047
text = "Password
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status" type="Label" parent="WelcomeScene"]
margin_left = 515.0
margin_top = 385.0
margin_right = 758.0
margin_bottom = 404.0
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="WelcomeScene/LoginButton" to="WelcomeScene/LoginButton" method="_on_LoginButton_button_up"]
[connection signal="button_up" from="WelcomeScene/SignupButton" to="WelcomeScene/SignupButton" method="_on_SignupButton_button_up"]
[connection signal="button_up" from="WelcomeScene/ExitButton" to="WelcomeScene/ExitButton" method="_on_Exit_button_up"]
